# etl_platform

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md
.github/workflows/: github-actions-pre-commit.yml
backend/: Dockerfile  pyproject.toml
backend/app/: app.py
backend/app/config/: __init__.py  settings.py
backend/app/models/orm/: analytics.py
backend/app/models/serialization/: analytics.py
backend/app/repositories/: __init__.py  analytics.py
backend/app/routers/: analytics.py
etl/: .gitignore
etl/config/: airflow.config
etl/dags/: aws.py  branch.py  connections.py  etl_dag.py  extract.py  gcp.py  settings.py  transfer_gcs_to_bq.py  transfer_s3_to_redshift.py  transform.py  upload.py
terraform/: .gitignore
terraform/aws/: main.tf  outputs.tf  variables.tf
terraform/gcp/: main.tf  outputs.tf  variables.tf
