[tool.poetry]
name = "ETL Backend"
version = "1.0.0"
description = "Backend for ETL platform"
authors = ["vladyslavyaloveha <vladyslavyaloveha@gmail.com>"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
fastapi = "~0.110.2"
uvicorn = "~0.29.0"
pydantic = "~2.7.0"
pydantic-settings = "~2.2.1"
boto3 = "~1.34.83"
fastapi-pagination = "~0.12.23"
sqlalchemy = "~1.4.52"
sqlalchemy-bigquery = "~1.11.0"
sqlalchemy-redshift = "~0.8.14"
redshift-connector = "^2.1.1"
